Fixed a bug with white space detection in scanner

--- a/Resources/CSS/screen.scss
+++ b/Resources/CSS/screen.scss
@@ -309,6 +309,7 @@ ul, ol {
 /*////////////////////////////////////////////////////////////////////////////*/
 
 .quote {
+	padding-bottom: $paragraphPadding;
 	font-style: italic;
 	@include centerWithWidth(70%);
 
